Bug Fix: Overflow not hidden

--- a/static/todo.css
+++ b/static/todo.css
@@ -151,6 +151,8 @@ div.header form div.input {
 .content h1 {
     font-size: 1rem;
     margin: 0.2rem 0 0.2rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .content p {
